// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioInput renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 erdTQn"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 hYLvQc"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ctdetp FormField__FormFieldBox-sc-m9hood-0 casIFC RadioInput__StyledFormField-sc-1brmdkl-0 htgVAv"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fzAqvK FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kxttXh"
          disabled=""
        >
          <div
            class="StyledBox-sc-13pk1d4-0 irsxmR StyledRadioButton-sc-g1f6ld-5 gRXRYB"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 ewxzzW"
              disabled=""
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 kLaGEz StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 jAFIwK"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 bTMOHS"
          >
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioInput renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 erdTQn"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 hYLvQc"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ctdetp FormField__FormFieldBox-sc-m9hood-0 casIFC RadioInput__StyledFormField-sc-1brmdkl-0 htgVAv"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fzAqvK FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 fDXvkk"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 irsxmR StyledRadioButton-sc-g1f6ld-5 gRXRYB"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 kFqzCK"
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 kLaGEz StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 jAFIwK"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 bTMOHS"
          >
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioInput renders an input with a form field label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 erdTQn"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 hYLvQc"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ctdetp FormField__FormFieldBox-sc-m9hood-0 casIFC RadioInput__StyledFormField-sc-1brmdkl-0 htgVAv"
      tabindex="0"
    >
      <label
        class="StyledText-sc-1sadyjn-0 icUwKR"
        for="some-input"
      >
        A brilliant input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 fzAqvK FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 fDXvkk"
          for="some-input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 irsxmR StyledRadioButton-sc-g1f6ld-5 gRXRYB"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 kFqzCK"
              id="some-input"
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 kLaGEz StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 jAFIwK"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 bTMOHS"
          >
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioInput renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 erdTQn"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 hYLvQc"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ctdetp FormField__FormFieldBox-sc-m9hood-0 casIFC RadioInput__StyledFormField-sc-1brmdkl-0 htgVAv"
      tabindex="0"
    >
      <span
        class="StyledText-sc-1sadyjn-0 eASVNJ"
      >
        This is a very cool input
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 fzAqvK FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 fDXvkk"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 irsxmR StyledRadioButton-sc-g1f6ld-5 gRXRYB"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 kFqzCK"
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 kLaGEz StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 jAFIwK"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 bTMOHS"
          >
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioInput renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 erdTQn"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 hYLvQc"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ctdetp FormField__FormFieldBox-sc-m9hood-0 casIFC RadioInput__StyledFormField-sc-1brmdkl-0 htgVAv"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fzAqvK FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 fDXvkk"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 irsxmR StyledRadioButton-sc-g1f6ld-5 gRXRYB"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 kFqzCK"
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 kLaGEz StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 jAFIwK"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 bTMOHS"
          >
            Some input
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 fbPnYz"
      >
        You failed at this
      </span>
    </div>
  </div>
</div>
`;

exports[`RadioInput renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 erdTQn"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 hYLvQc"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ctdetp FormField__FormFieldBox-sc-m9hood-0 casIFC RadioInput__StyledFormField-sc-1brmdkl-0 htgVAv"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fzAqvK FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 fDXvkk"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 irsxmR StyledRadioButton-sc-g1f6ld-5 gRXRYB"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 kFqzCK"
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 kLaGEz StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 jAFIwK"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 bTMOHS"
          >
            Some input
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 drMgMi"
      >
        You can set a cool value
      </span>
    </div>
  </div>
</div>
`;
